@@ -71,33 +71,21 @@ public class OrderService {
 
     // 로그인 된 회원의 주문내역 조회
     @Transactional
-    public Map<String, Object> getMyBookingList(long memberCode, int start) {
+    public List<OrderDTO> getRecentOrders(long memberCode) {
+        MemberEntity member = memberRepo.findById(memberCode).orElseThrow();
+        LocalDate cutoff = LocalDate.now().minusMonths(6);
+        return orderRepo.findRecentOrders(member, cutoff).stream()
+                .map(OrderDTO::new)
+                .collect(Collectors.toList());
+    }
 
-        MemberEntity member = memberRepo.findById(memberCode)
-                .orElseThrow(() -> new IllegalArgumentException("회원이 존재하지 않습니다."));
-
-        start = start > 0? start -1 : start;
-
-        int size = 4;
-        Pageable pageable = PageRequest.of(start, size, Sort.by(Sort.Order.desc("orderDate")));
-        Page<OrderEntity> page = orderRepo.findByMember(member, pageable);
-        List<OrderEntity> listE = page.getContent();
-
-        LocalDate today = LocalDate.now();
-        for (OrderEntity order : page.getContent()) {
-            LocalDate resDate = order.getOption().getReservationDate();
-            if (order.getOrderStatus() == OrderStatus.SCHEDULED && resDate != null && resDate.isBefore(today)) {
-                order.setOrderStatus(OrderStatus.COMPLETED);
-                orderRepo.save(order); // 자동 갱신
-            }
-        }
-
-        Map<String, Object> map = new HashMap<>();
-        map.put("list", listE.stream().map(entity -> new OrderDTO(entity)).toList());
-        map.put("totalPages", page.getTotalPages());
-        map.put("currentPage", page.getNumber() + 1);
-
-        return map;
+    @Transactional
+    public List<OrderDTO> getOldOrders(long memberCode) {
+        MemberEntity member = memberRepo.findById(memberCode).orElseThrow();
+        LocalDate cutoff = LocalDate.now().minusMonths(6);
+        return orderRepo.findOldOrders(member, cutoff).stream()
+                .map(OrderDTO::new)
+                .collect(Collectors.toList());
     }
 
     @Transactional
@@ -137,18 +125,18 @@ public class OrderService {
                 .collect(Collectors.toList());
     }
 
-    @Transactional(readOnly = true)
-    public List<OrderDTO> getOrdersByUsername(String username) {
-        MemberEntity member = memberRepo.findByMemberId(username)
-                .orElseThrow(() -> new UsernameNotFoundException("회원이 존재하지 않습니다."));
-
-        Pageable pageable = PageRequest.of(0, 4); // 예: 첫 페이지, 100개씩
-        Page<OrderEntity> orderPage = orderRepo.findByMember(member, pageable);
-
-        return orderPage.getContent().stream()
-                .map(OrderDTO::new)
-                .collect(Collectors.toList());
-    }
+//    @Transactional(readOnly = true)
+//    public List<OrderDTO> getOrdersByUsername(String username) {
+//        MemberEntity member = memberRepo.findByMemberId(username)
+//                .orElseThrow(() -> new UsernameNotFoundException("회원이 존재하지 않습니다."));
+//
+//        Pageable pageable = PageRequest.of(0, 4); // 예: 첫 페이지, 100개씩
+//        Page<OrderEntity> orderPage = orderRepo.findByMember(member, pageable);
+//
+//        return orderPage.getContent().stream()
+//                .map(OrderDTO::new)
+//                .collect(Collectors.toList());
+//    }
 
     @Transactional
     public int updateOrderStatusIfCompleted(Long orderCode) {
@@ -185,86 +173,4 @@ public class OrderService {
                 .orElseThrow(() -> new IllegalArgumentException("주문이 존재하지 않습니다."));
         order.setOrderStatus(OrderStatus.CANCELED);
     }
-
-//    public int updateOrdersToCompleted(Long orderCode) {
-//        List<OrderEntity> orders = orderRepo.findByOrderStatus(OrderStatus.SCHEDULED);
-//
-//        int count = 0;
-//        LocalDate today = LocalDate.now();
-//
-//        for (OrderEntity order : orders) {
-//            LocalDate reservationDate = order.getOption().getReservationDate();
-//            if (reservationDate != null && reservationDate.isBefore(today)) {
-//                order.setOrderStatus(OrderStatus.COMPLETED);
-//                count++;
-//            }
-//        }
-
-//        return count;
-//    }
-
-
-
-
-//    public List<OrderDTO> getBookingsByMemberCodeAndStatus(String memberId, OrderStatus orderStatus) {
-//        List<OrderDTO> bookings;
-//        if (orderStatus == null) {
-//            bookings = orderRepo.findAllByMemberId(memberId);
-//        } else {
-//            bookings = orderRepo.findAllByMemberIdAndOrderStatus(memberId, orderStatus);
-//        }
-//        return orderRepo.findAll()
-//                .stream()
-//                .map(OrderDTO::new)
-//                .collect(Collectors.toList());
-//    }
-
-//    public List<OrderDTO> getAllMemberBookingList() {
-//        return orderRepo.findAll()
-//                .stream()
-//                .map(entity -> new OrderDTO(entity))
-//                .toList();
-//    }
-
-//    @Transactional(readOnly = true)
-//    public List<OrderDTO> getCompletedOrders(long memberCode) {
-//        List<OrderEntity> orders = orderRepo.findByMember_MemberCodeAndOrderStatus(memberCode, OrderStatus.COMPLETED);
-//
-//        return orders.stream()
-//                .map(order -> {
-//                    OrderDTO dto = new OrderDTO(order);
-//                    boolean isReviewed = reviewRepo.existsByOrder_OrderCode(order.getOrderCode());
-//                    dto.setReviewed(isReviewed);  // 추가
-//                    return dto;
-//                })
-//                .collect(Collectors.toList());
-//    }
-
-    // 지난 여행 내역 조회 시 리뷰작성 여부
-//    public List<OrderDTO> getPastTripsByMember(long memberCode) {
-//        List<OrderEntity> orders = orderRepo.findPastTripsByMember(memberCode);
-//
-//        return orders.stream()
-//                .map(order -> {
-//                    OrderDTO dto = new OrderDTO(order);
-//                    boolean reviewed = reviewRepo.existsByOrder_OrderCode(order.getOrderCode());
-//                    dto.setReviewed(reviewed);
-//                    return dto;
-//                })
-//                .collect(Collectors.toList());
-//    }
-
-//    public Map<String, Object> getAllMemberBookingList(int start) {
-//        start = start > 0? start -1 : start;
-//        int size = 10;   // 한 페이지에 10개 항목
-//        Pageable pageable = PageRequest.of(start, size, Sort.by(Sort.Order.desc("orderDate")));
-//        Page<OrderEntity> page = orderRepo.findAll(pageable);
-//        List<OrderEntity> listE = page.getContent();
-//
-//        Map<String, Object> map = new HashMap<>();
-//        map.put("list", listE.stream().map(entity -> new OrderDTO(entity)).toList());
-//        map.put("totalPages", page.getTotalPages());
-//        map.put("currentPage", page.getNumber() + 1);
-//        return map;
-//    }
 }
